--- a/css/app.css
+++ b/css/app.css
@@ -223,8 +223,7 @@ body {
   @media (max-width: 75em) {
     .card {
       width: 50%;
-      margin: auto;
-      height: 60rem; } }
+      margin: auto; } }
   @media (max-width: 37.5em) {
     .card {
       width: 65%;
@@ -249,7 +248,7 @@ body {
     @media (max-width: 75em) {
       .card__side {
         width: 100%;
-        height: 60rem; } }
+        height: 50rem; } }
     .card__side--back {
       transform: rotateY(180deg); }
       .card__side--back--1 {
@@ -322,6 +321,29 @@ body {
   .card__price-value {
     font-size: 6rem;
     font-weight: 100; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto !important; }
+      .card__side {
+        position: relative;
+        height: auto; }
+        .card__side--front {
+          padding-bottom: 8rem; }
+        .card__side--back {
+          transform: rotateY(0);
+          height: 30rem !important;
+          clip-path: polygon(0 30%, 100% 0, 100% 100%, 0% 100%);
+          transform: translateY(-8rem);
+          border-radius: 0;
+          margin-top: -2rem; }
+      .card__image {
+        height: 25rem; }
+      .card__cta {
+        height: 25rem;
+        padding-top: 3rem; }
+      .card__price-box {
+        margin-bottom: 1rem;
+        margin-top: 2rem; } }
 
 .composition {
   position: relative;
@@ -392,7 +414,7 @@ body {
   transition: all 0.3s; }
   @media (max-width: 75em) {
     .feature-box {
-      width: 50rem;
+      width: 40rem;
       margin: auto; } }
   @media (max-width: 37.5em) {
     .feature-box {
@@ -420,6 +442,18 @@ body {
   border-radius: 3px;
   transform: skewX(-7deg);
   position: relative; }
+  @media (max-width: 75em) {
+    .story {
+      width: 100%; } }
+  @media (max-width: 56.25em) {
+    .story {
+      transform: skewX(0deg);
+      padding: 7rem; } }
+  @media (max-width: 37.5em) {
+    .story {
+      width: 90%;
+      padding: 2rem;
+      padding-left: 5rem; } }
   .story__shape {
     width: 15rem;
     height: 15rem;
@@ -430,13 +464,21 @@ body {
     -webkit-clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(7deg);
     overflow: hidden; }
+    @media (max-width: 56.25em) {
+      .story__shape {
+        transform: translateX(-3rem) skewX(0deg); } }
+    @media (max-width: 37.5em) {
+      .story__shape {
+        margin-left: 2rem; } }
   .story__img {
     transform: translateX(-3rem) scale(1.4);
     height: 100%;
-    transition: all 0.3s ease;
-    backface-visibility: hidden; }
+    transition: all 0.3s ease; }
   .story__text {
     transform: skewX(7deg); }
+    @media (max-width: 56.25em) {
+      .story__text {
+        transform: skewX(0deg); } }
   .story__caption {
     text-align: center;
     position: absolute;
@@ -481,9 +523,13 @@ body {
   padding: 1.5rem 2rem;
   border-radius: 3px;
   background-color: #ffff;
+  box-shadow: 1rem 1rem 2rem #0000005e;
   border: none;
   border-bottom: 3px solid transparent;
   transition: all 0.3s; }
+  @media (max-width: 75em) {
+    .form__input {
+      width: 100%; } }
   .form__input:focus {
     box-sizing: inherit;
     outline: none;
@@ -514,6 +560,11 @@ body {
 .form__radio-group {
   width: 49%;
   display: inline-block; }
+  @media (max-width: 37.5em) {
+    .form__radio-group {
+      width: 100%; }
+      .form__radio-group:not(:last-child) {
+        margin-bottom: 2rem; } }
 
 .form__radio-input {
   display: none; }
@@ -576,18 +627,46 @@ body {
     border-radius: 2px;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
     transition: all 0.8s; }
+    @media (max-width: 75em) {
+      .popup__content {
+        display: block;
+        height: auto; } }
   .popup__left {
     width: 35%;
     display: table-cell; }
+    @media (max-width: 75em) {
+      .popup__left {
+        width: 100%;
+        display: block;
+        height: 35vh; } }
+    @media (max-width: 56.25em) {
+      .popup__left {
+        height: 30vh; } }
+    @media (max-width: 37.5em) {
+      .popup__left {
+        display: none; } }
   .popup__right {
     width: 65%;
     padding: 3rem 5rem;
     display: table-cell;
     vertical-align: middle; }
+    @media (max-width: 75em) {
+      .popup__right {
+        width: 100%;
+        display: block; } }
+    @media (max-width: 37.5em) {
+      .popup__right {
+        padding: 1rem 2rem; } }
   .popup__img {
     display: block;
     width: 100%;
     height: 50%; }
+    @media (max-width: 75em) {
+      .popup__img {
+        height: 100%;
+        width: 50%;
+        object-fit: cover;
+        float: left; } }
   .popup__text {
     margin-bottom: 3rem;
     font-size: 1.4rem;
@@ -599,6 +678,9 @@ body {
     -ms-hyphens: auto;
     -moz-hyphens: auto;
     hyphens: auto; }
+    @media (max-width: 37.5em) {
+      .popup__text {
+        column-count: 1; } }
   .popup__close, .popup__close:link, .popup__close:visited {
     position: fixed;
     top: 1rem;
@@ -770,6 +852,12 @@ body {
     font-weight: 300;
     text-align: center;
     transition: all 0.8s cubic-bezier(0.46, -0.31, 0.07, 1.17); }
+    @media (max-width: 56.25em) {
+      .navigation__list {
+        width: 70%; } }
+    @media (max-width: 37.5em) {
+      .navigation__list {
+        width: 85%; } }
   .navigation__item {
     list-style: none; }
     .navigation__item:not(:last-child) {
@@ -882,6 +970,19 @@ body {
   height: 50rem;
   border-radius: 3px;
   box-shadow: 2px 3rem 6rem rgba(0, 0, 0, 0.5); }
+  @media (max-width: 75em) {
+    .book {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url(../img/nat-10.jpg); } }
+  @media (max-width: 37.5em) {
+    .book {
+      width: 90%;
+      margin: auto; } }
   .book__form {
     width: 50%;
     padding: 6rem; }
+    @media (max-width: 75em) {
+      .book__form {
+        width: 100%; } }
+    @media (max-width: 25em) {
+      .book__form {
+        padding: 4rem 2rem; } }
