--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -11,12 +11,16 @@
 
         border-radius: 3px; 
         background-color: $color-white;
+        box-shadow: 1rem 1rem 2rem #0000005e;
         border: none;
 
         border-bottom: 3px solid transparent;
 
         transition: all 0.3s ;
 
+        @include responsive(tab-land){
+            width : 100% ; 
+        }
 
         &:focus{
             box-sizing: inherit;
@@ -60,6 +64,12 @@
     &__radio-group {
         width : 49% ; 
         display: inline-block;
+        @include responsive(phone){
+            width : 100% ; 
+            &:not(:last-child){
+                margin-bottom: 2rem ;
+            }
+        }
     }
 
     &__radio-input {
