--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -28,22 +28,52 @@
     border-radius: 2px;
     box-shadow: 0 1rem 2rem rgba($color-black, 0.3s);
     transition: all 0.8s;
+
+    @include responsive(tab-land) {
+      display: block;
+      height: auto;
+    }
   }
 
   &__left {
     width: 35%;
     display: table-cell;
+    @include responsive(tab-land) {
+      width: 100%;
+      display: block;
+      height: 35vh;
+    }
+    @include responsive(tab-port) {
+      height: 30vh;
+    }
+    @include responsive(phone) {
+      display: none;
+    }
   }
   &__right {
     width: 65%;
     padding: 3rem 5rem;
     display: table-cell;
     vertical-align: middle;
+    @include responsive(tab-land) {
+      width: 100%;
+      display: block;
+    }
+    @include responsive(phone) {
+      padding: 1rem 2rem;
+    }
+    
   }
   &__img {
     display: block;
     width: 100%;
     height: 50%;
+    @include responsive(tab-land) {
+      height: 100%;
+      width: 50%;
+      object-fit: cover;
+      float: left;
+    }
   }
 
   &__text {
@@ -60,6 +90,9 @@
     -ms-hyphens: auto;
     -moz-hyphens: auto;
     hyphens: auto;
+    @include responsive(phone) {
+      column-count: 1 ;
+    }
   }
 
   &__close {
