--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,12 @@
   opacity: 0;
   transition: all 0.3s;
 
+  @supports (backdrop-filter: blur(10px)) or (-webkit-backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px) ;
+    backdrop-filter: blur(10px) ;
+    background-color: rgba($color-black, 0.3);
+  }
+
   &:target {
     visibility: visible;
     opacity: 1;
