--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -23,20 +23,30 @@
         padding: 2rem;
         padding-left: 5rem;
     }
-    // the shape outside requires a defined dimentions and float 
+    
     &__shape {
 
         width: 15rem;
         height: 15rem;
+        border-radius: 50%;
         float : left ; 
-        shape-outside: circle(50% at 50% 50%);
-        -webkit-shape-outside: circle(50% at 50% 50%);
-        clip-path : circle(50% at 50% 50%);
-
-        -webkit-clip-path : circle(50% at 50% 50%);
         transform : translateX(-3rem) skewX(7deg) ; 
 
         overflow: hidden;
+
+        @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+            -webkit-clip-path : circle(50% at 50% 50%);
+            clip-path : circle(50% at 50% 50%);
+
+            // the shape outside requires a defined dimentions and float 
+            -webkit-shape-outside: circle(50% at 50% 50%);
+            shape-outside: circle(50% at 50% 50%);
+
+            width: 15rem;
+            height: 15rem;
+
+            border-radius: none;
+        }
 
         @include responsive(tab-port){
             transform: translateX(-3rem) skewX(0deg);
