--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    height: 95vh;
+    height: 85vh;
     background-image: linear-gradient(
         to right bottom,
         rgba($Light-green, 0.8),
@@ -8,8 +8,14 @@
       url(../img/hero-small.jpg);
     background-size: cover;
     background-position: top;
-    clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0% 100%);
+    
     position: relative;
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path : polygon(0 0)) {
+      height: 95vh;
+      -webkit-clip-path : polygon(0 0, 100% 0%, 100% 75vh, 0% 100%) ;
+      clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0% 100%);
+    }
 
     // responsive images for different screen width and resolutions 
  
